fix(scheduling): 修复课程表接口参数命名和代码格式问题
- 将 CourseScheduleController 中的 semesterUuid 参数名称修改为 semester_uuid，以符合 API 规范。
- 在 CourseScheduleDAO 中清理多余的空行，优化代码格式，提高可读性。
- 更新 AutomaticClassSchedulingThread 和 ScheduleLessonsDataPreparationThread 中的异常处理逻辑，确保在发生错误时能够正确记录状态并处理任务。